--- a/public/data/project-data.json
+++ b/public/data/project-data.json
@@ -1,6 +1,6 @@
 {
     "hero-main-title": {
-        "content": "모델, 스튜디오, <br class=\"block sm:hidden\" />수십 명의 스태프... 촬영 견적의 거품은 기술로 걷어냈습니다.",
+        "content": "모델, 스튜디오, 수십 명의 스태프...<br class=\"block sm:hidden\" />촬영 견적의 거품은 기술로 걷어냈습니다.",
         "style": {
             "color": "rgb(255, 255, 255)",
             "fontWeight": "700",
