--- a/public/data/project-data.json
+++ b/public/data/project-data.json
@@ -1,1 +1,1 @@
-{}
+{"hero-main-title":{"content":"모델, 스튜디오, 수십 명의 스태프...<div><br class=\"block sm:hidden\">촬영 견적의 거품은 기술로 걷어냈습니다.</div>","style":{"color":"rgb(255, 255, 255)","fontWeight":"700","textAlign":"center"}}}
